<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent">

        <Button
            android:id="@+id/btnback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/txtheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/shopping"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnfiftyfifty"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/orange_button"
            android:padding="8dp"
            android:text="@string/_50_for_a_month"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnskip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/orange_button"
            android:padding="8dp"
            android:text="@string/_100_for_3_months"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btntimer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/orange_button"
            android:padding="8dp"
            android:text="@string/_150_for_a_year"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
