<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/header"
    android:layout_below="@+id/realteHigh"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/seperator" />

            <TextView
                android:id="@+id/txtid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="0.99"
                android:gravity="center"
                android:text="@string/sr_no"
                android:typeface="serif"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/seperator" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.99"
                    android:gravity="center"
                    android:text="@string/name"
                    android:typeface="serif"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/seperator" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtscore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.99"
                    android:gravity="center"
                    android:text="@string/score"
                    android:typeface="serif"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/seperator" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/seperator" />

</LinearLayout>